# qlearn

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  qlearn  qlearning
lib/: libSDL2-2.0.so.0.3000.0  libSDL2_image-2.0.so.0.800.2  libSDL2_mixer-2.0.so.0.800.0  libSDL2_ttf-2.0.so.0.2200.0
src/: agent.cpp  image.cpp  main.cpp  qlearn.cpp  world.cpp
src/image/: grass.aseprite  hero.aseprite  mushr_broth.aseprite
src/include/: headers.hpp
